Dev: Enable proj-ref-* editable-mode install

--- a/proj_ref_d/setup.cfg
+++ b/proj_ref_d/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = proj_ref-d
-version = 1.0.0
+version = 1.0.1
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
@@ -10,12 +10,10 @@ classifiers =
 
 [options]
 python_requires = >=3.7
-packages = find:
+packages = find_namespace:
 include_package_data = true
 install_requires =
-    root-namespace-proj_ref
-namespace_packages =
-    proj_ref
+    root-namespace-proj_ref>=1.0.1
 
 [options.packages.find]
 include = proj_ref*
